add new table to chap 4

--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -1,5 +1,5 @@
-<!-- The following code should appear at the beginning of the first appendix.
-After that, all subsequent sections will be turned into appendices.
+<!-- 
+  render code
 bookdown::render_book("index.Rmd")
 
  -->
