updated Guidelines Ch 2

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -213,7 +213,7 @@ knitr::include_graphics("figure/coho-CU-EscpSeries-wStatus.png")
 knitr::include_graphics("figure/coho-Subpop-EscpSeries.png")
 ```
 
-
+\linebreak
 
 **Results**
 
