--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -1,7 +1,26 @@
 # LRP Estimation Methods for Pacific Salmon {#est-methods}
 
-This section will address the question: “What methods are available to develop SMU-level LRPs that are consistent with the WSP?”
+The development of LRPs for Pacific salmon was guided by two key principles. Following these principles allowed for some consistency and comparability among LRPs, with an aim to avoid differences in status resulting from different LRPs being applied to the same SMU.
+<!-- CH comment: some of the text in this subsection may be moved to the Intro-->
 
+First, as described in Section \@ref(intro), LRPs  "represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities.” (DFO PA). This definition highlights that LRPs should be above the level where serious harm occurs, not at the level where it is occurring, and that long-term losses should be avoided. Also, this definition mentions possible impacts on other ecosystem components. Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring (Hilborn and Walters 1992). 
+
+Second, LRPs for Pacific salmon were developed to align with the goal of Canada's Wild Salmon Policy, to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity (DFO 2005). The WSP is Pacific salmon's implementation of DFO's Precautionary Approach Framework. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). Biological benchmarks delineating three zones of green, amber, and red have been identified to represent zones of increasing conservation concern requiring management intervention. The lower benchmark delineating the red and amber zones is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). 
+
+One lower benchmark that is commonly used is the spawner abundances that results in recovery to SMSY within one generation under equilibrium conditions, Sgen (Holt et al. 2009). Status assessments under the Wild Salmon Policy generally integrate data across numerous dimensions of status, including spawner abundances, short and long-term trends, distribution of spawning, and fishing mortality relative to productivity (Holt et al. 2009). THe framework for defining biological units and their assessment under the WSP has been adopted widely in Canada (e.g., FR sock, IFR coho, SBC CK, Skeena report, PSE).
+
+Maintaining CUs above the red zone (i.e., spawner abundances > Sgen, and/or above lower benchmarks on various dimensions of status) is consistent with avoiding serious harm to the CU. At this level, irreversible or slowly reversible impacts are avoided. Therefore, to be consistent with the Wild Salmon Policy, LRPs need to allow for component CUs to be above their lower benchmarks.
+
+
+Our intention is to provide a variety of LRPs applicable for a range of data quality and data types. 
+Although for other marine fish species, LRPs are typically estimated as a minimum level of spawning biomass that should not be breached, or a fishing mortality rate that should not be exceeded (Kronlund et al. 2018), LRPs along alternative metrics that incorporate trends in abundances and distribution of spawning are considered here to be consistent with assessments under the WSP. 
+
+Furthermroe, DFO's PA Framework identifies additional metrics such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition.”
+
+Alternative LRPs aligned with the key principles above may be developed in the future to capture a broader range of data availablilty, quality, and types, and dimensions of biological status.<!-- CH comment: some suggestions to be included in "further analyses" sections in both WPs".-->
+
+
+Below, methods for estimating CU status are reviewing from previous status assessments under the WSP. Then candidate LRPs are briefly described (a more detailed description is included Working Paper 2), falling into two categories: those based on the proportion of component CUs above the red zone and those based on aggregate abundances. Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). <!--CH: choosing between ppn CUs and aggregate abundance will depend on decision context. If LRP is used within the context of a MP framework, then an aggregate abundance-based LRP may be more suitable, and does not need to be explicitly defined. -->
 
 ## Estimation of CU Status
 
@@ -15,7 +34,7 @@ This section will address the question: “What methods are available to develop
 
 
 -	We have not included metrics and benchmarks based on status of habitat or ecosystem status (strategies 2 and 3 of the WSP)
-
+- future work could further considere allee effects realtive to lower benchmarks
 
 <!-- KH comment: I have moved the following text here from the Chum chapter of the case study paper as I think it fits better here (July 19, 2021). This text was compiled by Luke.
 
@@ -120,7 +139,7 @@ If each of the component CUs of a SMU is above the red/amber benchmark and thus 
 
 - Decision tree for which LRP to use
 - With discussion of the advantages and challenges of each approach.  
-- maybe move to Section 4
+- move this sub-section to Chapter 4
 
 
 
