--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -26,10 +26,20 @@ Scales of Pacific salmon assessment reporting
 -	Unique characteristics of Pacific salmon data and assessment: e.g., diverse data available on various characteristics of population dynamics,	Multiple metrics and benchmarks are available that reflect this diversity
 -	Project Goal: Provide analysts and managers with methodological tools and guidance to identify LRPs for SMUs.   Having guidelines that have been reviewed and published through CSAS will provide a scientific basis for individual applications of the methodology throughout the Pacific Region in consultation with Indigenous groups and stakeholders, and ensure consistency in application.
 
-##	Review of Reference Points for Pacific Salmon
-- Brief review of reference points for salmon in other jurisdictions:
+## Review of Reference Points for Pacific Salmon
+
+
 
 -	Include a few recent key CSAS documents identifying LRPs to show context for Pacific salmon LRPS (Pacific Herring, Atlantic salmon, Snow Crab (multidimensional approach))
+-  Mention difference between previous salmon LRP work and this report: Previous work is focused on CU level LRP whereas the current work aims at providing guidance on setting LRPs for SMUs. 
+
+
+
+@portleyLimitReferencePoints2014 reviews the use of limit reference points (or their absence) for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs in allowing for cross-jurisdictional comparisons of sustainability.
+
+In Canada, @chaputConsiderationsDefiningReference2012 reviews the use of reference points, including LRPs, in the management of salmonids and other semelparous species. This review is focused on the stock/CU level applications of LRPs and provides a comprehensive overview of the different methods available to assess CU status and their historical applications. It also provides considerations on managing multiple stock fisheries or managing multiple stocks as unit, it highlights that mixed stock management requires more precautionary benchmarks to ensure that all stocks remain above their limit reference points.
+
+
 
 ## Role of LRPs
 
@@ -43,11 +53,11 @@ Scales of Pacific salmon assessment reporting
 - other roles? (e.g., prioritizing SMUs and planning monitoring/management).
 - these roles have not been clearly defined yet, and require further discussion beyond this process
 
-##	Objectives of this Document
+## Objectives of this Document
  - Provide guidance on setting LRPs for SMU
  - List alternative methods and highlight when they should be used and when they should be avoided 
 
-##	Approach Taken to Develop Guidelines
+## Approach Taken to Develop Guidelines
 -	Describe Technical Working Group
 -	Explain how case studies were used by the TWG to develop guidance
 
